# mpl

./: CMakeLists.txt  Dockerfile  readme.txt
app/: CMakeLists.txt  app_config.cpp  app_config.h  app_engine_impl.cpp  app_engine_impl.h  app_module_types.h  command_message_factory_impl.cpp  event_message_factory_impl.cpp  i_app_engine.h  i_app_module.h  i_core_module.h  test.cpp  test.h
core/: CMakeLists.txt  adaptive_delay.cpp  adaptive_delay.h  channel_control.cpp  channel_control.h  channel_types.h  command.cpp  command.h  command_types.h  common_types.h  convert_property_impl.cpp  convert_utils.h  convert_value_impl.cpp  core_engine_config.h  cyclic_data_reader.cpp  cyclic_data_reader.h  cyclic_data_writer.cpp  cyclic_data_writer.h  depacketizer.cpp  depacketizer.h  enum_convert_impl.cpp  enum_converter_defs.h  enum_serialize_defs.h  enum_utils.h  event.cpp  event.h  event_channel_state.cpp  event_channel_state.h  event_types.h  fifo_reader_impl.cpp  fifo_reader_impl.h  fifo_writer_impl.cpp  fifo_writer_impl.h  flow_stats.h  i_buffer.h  i_command_factory.h  i_core_engine.h  i_data_object.h  i_dynamic_buffer.h  i_event_factory.h  (+59 more)
core/ipc/: ipc_manager_impl.cpp  ipc_manager_impl.h
core/seq/: mapped_seq_header.cpp  mapped_seq_header.h  seq_buffer.cpp  seq_buffer.h  seq_packet.cpp  seq_packet.h  seq_packet_builder.cpp  seq_packet_builder.h  seq_parser.cpp  seq_parser.h  seq_types.h
core/sq/: mapped_sq_header.cpp  mapped_sq_header.h  sq_buffer.cpp  sq_buffer.h  sq_packet.cpp  sq_packet.h  sq_packet_builder.cpp  sq_packet_builder.h  sq_parser.cpp  sq_parser.h  sq_stitcher.cpp  sq_stitcher.h
log/: CMakeLists.txt  enum_convert_impl.cpp  log_message.cpp  log_message.h  log_tools.cpp  log_tools.h  logger_config.cpp  logger_config.h  logger_impl.cpp
media/: CMakeLists.txt  apm_device_factory.cpp  apm_device_factory.h  audio_composer.cpp  audio_composer.h  audio_format_helper.cpp  audio_format_helper.h  audio_format_impl.cpp  audio_format_impl.h  audio_format_info.cpp  audio_format_info.h  audio_frame_impl.cpp  audio_frame_impl.h  audio_frame_splitter.cpp  audio_frame_splitter.h  audio_info.cpp  audio_info.h  audio_level.cpp  audio_level.h  audio_mixer.cpp  audio_mixer.h  audio_processing_factory.cpp  audio_processing_factory.h  audio_sample.cpp  audio_sample.h  audio_types.h  channel_control.h  command_camera_control.cpp  command_camera_control.h  convert.h  convert_property_impl.cpp  convert_value_impl.cpp  device_info.cpp  device_types.h  draw_options.cpp  draw_options.h  enum_convert_impl.cpp  enum_serialize_impl.cpp  enum_utils.h  event.h  (+164 more)
media/apm/: apm_device_factory.cpp  apm_device_params.cpp
media/ipc/: ipc_input_device_factory.cpp  ipc_input_device_factory.h  ipc_output_device_factory.cpp  ipc_output_device_factory.h
media/libav/: libav_audio_converter_factory.cpp  libav_audio_converter_factory.h  libav_format_utils.cpp  libav_input_device_factory.cpp  libav_output_device_factory.cpp  libav_output_device_factory.h  libav_transcoder_factory.cpp  libav_video_converter_factory.cpp  libav_video_converter_factory.h
media/mcu/: audio_composer.cpp  audio_composer.h  compose_audio_track_params.cpp  compose_stream_params.cpp  compose_stream_params.h  compose_video_track_params.cpp  compose_video_track_params.h  layout_manager_mosaic_impl.cpp  layout_manager_mosaic_impl.h  media_composer_factory_impl.cpp  video_composer.cpp  video_composer.h
media/v4l2/: v4l2_device_factory.cpp  v4l2_utils.cpp
media/visca/: visca_device_factory.cpp  visca_device_factory.h
media/vnc/: vnc_device_factory.cpp
net/: CMakeLists.txt  endpoint.cpp  enum_convert_impl.cpp  enum_serialize_impl.cpp  i_net_engine.h  i_net_packet.h  i_net_packet_builder.h  i_socket_packet.h  i_socket_transport.h  i_transport_collection.h  net_command_message_impl.cpp  net_command_types.h  net_core.cpp  net_core.h  net_core_config.cpp  net_core_config.h  net_engine_impl.cpp  net_engine_impl.h  net_event_message_impl.cpp  net_event_types.h  net_message_types.h  net_module_types.h  net_packet_builder_impl.cpp  net_packet_builder_impl.h  net_serialize_impl.cpp  net_types.h  net_utils.cpp  net_utils.h  socket_endpoint.cpp  socket_endpoint.h  socket_packet_impl.h  socket_types.h  test.cpp  test.h  udp_transport_factory.cpp  udp_transport_factory.h  udp_transport_params.cpp  udp_transport_params.h
net/ice/: i_ice_transport.h  ice_candidate.cpp  ice_candidate.h  ice_config.cpp  ice_config.h  ice_controller.cpp  ice_controller.h  ice_gathering_command.cpp  ice_gathering_command.h  ice_gathering_state_event.cpp  ice_gathering_state_event.h  ice_server_params.h  ice_socket.cpp  ice_socket.h  ice_transaction.h  ice_transport_factory.cpp  ice_transport_factory.h  ice_transport_params.cpp  ice_transport_params.h  ice_types.h  ice_utils.cpp  ice_utils.h
net/serial/: i_serial_packet_builder.h  i_serial_transport.h  serial_packet_builder_impl.cpp  serial_packet_builder_impl.h  serial_packet_impl.cpp  serial_packet_impl.h  serial_transport_factory.cpp  serial_transport_params.cpp
net/socket/: i_socket_packet.h  i_socket_transport.h  i_udp_transport.h  socket_allocator.cpp  socket_allocator.h  socket_endpoint.cpp  socket_types.h  (+9 more)
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
utils/: CMakeLists.txt  adaptive_delay.cpp  adaptive_delay.h  bitrate_calculator.cpp  bitrate_calculator.h  buffer_factory_impl.h  common_utils.cpp  common_utils.h  convert_value_impl.cpp  core_engine_impl.cpp  core_event_factory.cpp  core_event_factory.h  cyclic_data_reader.h  data_splitter.cpp  depacketizer.cpp  depacketizer.h  endian_utils.cpp  endian_utils.h  enum_convert_impl.cpp  enum_converter_defs.h  enum_serialize_defs.h  fifo_reader_impl.cpp  fifo_reader_impl.h  fifo_writer_impl.cpp  fifo_writer_impl.h  ipc_manager_impl.cpp  json_utils.cpp  json_utils.h  mapped_packet.h  message_command_impl.h  message_command_impl.tpp  message_event_impl.cpp  message_event_impl.h  message_event_impl.tpp  message_router_impl.h  message_sink_impl.cpp  message_sink_impl.h  option_helper.cpp  option_helper.h  option_value_impl.cpp  (+36 more)
(+614 files in other folders)
