cmake_minimum_required(VERSION 3.16)

set(TARGET mplmedia)

set(SOURCES
    test.cpp
    enum_convert_impl.cpp
    enum_serialize_impl.cpp
    media_utils.cpp
    format_utils.cpp
    libav_format_utils.cpp
    audio_frame_splitter.cpp
    audio_format_impl.cpp
    audio_info.cpp
    audio_frame_impl.cpp
    audio_format_helper.cpp
    audio_mixer.cpp
    audio_level.cpp
    audio_sample.cpp
    video_format_impl.cpp
    video_info.cpp
    video_frame_impl.cpp
    media_packetizer_impl.cpp
    timestamp_calculator.cpp
    libav_video_converter_factory.cpp
    libav_audio_converter_factory.cpp
    libav_transcoder_factory.cpp
    libav_input_device_factory.cpp
    libav_output_device_factory.cpp
    vnc_device_factory.cpp
    apm_device_factory.cpp
    visca_device_factory.cpp
    media_converter_factory_impl.cpp
    media_serialize_impl.cpp
    smart_transcoder_factory.cpp
    v4l2_device_factory.cpp
    v4l2_utils.cpp
    ipc_input_device_factory.cpp
    ipc_output_device_factory.cpp
    draw_options.cpp
    image_frame.cpp
    image_builder.cpp
    audio_composer.cpp
    video_composer.cpp
    layout_manager_mosaic_impl.cpp
    media_composer_factory_impl.cpp
    command_camera_control.cpp
    media_command_message_impl.cpp
)

set(PUBLIC_HEADERS
    media_types.h
    device_types.h
    audio_types.h
    audio_info.h
    video_types.h
    video_frame_types.h
    video_info.h
    stream_types.h
    media_option_types.h
    command_camera_control.h
    i_media_stream.h
    i_media_format.h
    i_message_media_data.h
    i_media_frame.h
    i_media_converter_factory.h
    i_media_converter.h
    i_layout.h
    i_layout_manager.h
    i_compose_stream.h
    i_media_composer_factory.h
    i_media_composer.h
    i_audio_format.h
    i_video_format.h
    i_audio_frame.h
    i_video_frame.h
    i_device.h
    i_device_factory.h
    i_frame_buffer.h
    )

set(PRIVATE_HEADERS
    test.h
    media_utils.h
    libav_format_utils.h
    format_utils.h
    audio_frame_splitter.h
    audio_format_impl.h
    video_format_impl.h
    audio_frame_impl.h
    video_frame_impl.h
    audio_format_helper.h
    audio_mixer.h
    audio_level.h
    audio_sample.h
    timestamp_calculator.h
    libav_video_converter_factory.h
    libav_audio_converter_factory.h
    libav_transcoder_factory.h
    libav_input_device_factory.h
    libav_output_device_factory.h
    vnc_device_factory.h
    apm_device_factory.h
    visca_device_factory.h
    media_converter_factory_impl.h
    smart_transcoder_factory.h
    v4l2_device_factory.h
    v4l2_utils.h
    ipc_input_device_factory.h
    ipc_output_device_factory.h
    draw_options.h
    image_frame.h
    image_builder.h
    audio_composer.h
    video_composer.h
    layout_manager_mosaic_impl.h
    media_composer_factory_impl.h
    media_command_message_impl.h
)


add_library(${TARGET}
    ${SOURCES}
    ${PRIVATE_HEADERS}
    ${PUBLIC_HEADERS}
)
